Fix overlap of badges with scrollbar

--- a/resources/scss/views/ItemList/Components/Filter/item-dropdown.scss
+++ b/resources/scss/views/ItemList/Components/Filter/item-dropdown.scss
@@ -56,6 +56,7 @@
             position: relative;
             top: 7px;
             float: right;
+            right: 10px;
         }
     }
 }
